--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.2.53",
     "@types/react-dom": "^18.2.18",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.6.7",
+    "miragejs": "^0.1.48",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
