--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^16.18.79",
     "@types/react": "^18.2.53",
     "@types/react-dom": "^18.2.18",
+    "@types/react-modal": "^3.16.3",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.6.7",
     "miragejs": "^0.1.48",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
